# core/router/router.go
@@ -8,13 +8,10 @@ import (
 	"github.com/yasniel1408/hexa-ddd-golang-gin/core/db"
 	_ "github.com/yasniel1408/hexa-ddd-golang-gin/docs"
 	middlewares "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/common/middlewares"
-	productApp "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/products/application"
-	productIn "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/products/infrastructure/in"
-	productOut "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/products/infrastructure/out"
-	userApp "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/users/application"
-	"github.com/yasniel1408/hexa-ddd-golang-gin/pkg/users/infrastructure/in_adapters/http"
-	cache "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/users/infrastructure/out_adapters/cache"
-	userOut "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/users/infrastructure/out_adapters/sql"
+	userApp "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/identity/application"
+	"github.com/yasniel1408/hexa-ddd-golang-gin/pkg/identity/infrastructure/input_adapters/http"
+	cache "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/identity/infrastructure/output_adapters/cache"
+	userOut "github.com/yasniel1408/hexa-ddd-golang-gin/pkg/identity/infrastructure/output_adapters/sql"
 )
 
 func SetupRouter() *gin.Engine {
@@ -32,30 +29,26 @@ func SetupRouter() *gin.Engine {
 	// Middleware de autenticación
 	authMiddleware := middlewares.AuthMiddleware(jwtKey)
 
-	// Repositorios
-	userRepo := userOut.UserRepository(database)
-	productRepo := productOut.ProductRepository(database)
+	// ADAPTERS
+	// Out
+	userRepo := userOut.UserSqliteAdapter(database)
 
 	// Servicios
 	authService := userApp.AuthService(userRepo, jwtKey)
 	userService := userApp.UserService(userRepo, mycache)
-	productService := productApp.ProductService(productRepo)
 
-	// Controller
+	// Http
 	authController := http.AuthController(authService)
 	userController := http.UserController(userService)
-	productController := productIn.ProductController(productService)
 
 	// Rutas
 	api := router.Group("/api")
 	{
+		api.Group("/identity")
 		api.POST("/register", authController.Register)
 		api.POST("/login", authController.Login)
-		api.GET("/users/:id", userController.GetUser)
+		api.GET("/users/:id", authMiddleware, userController.GetUser)
 
-		api.GET("/products", productController.GetAllProducts)
-		api.GET("/products/:id", productController.GetProduct)
-		api.POST("/products", authMiddleware, productController.CreateProduct)
 	}
 
 	// Documentación Swagger
