# pkg/identity/infrastructure/input_adapters/http/dtos/get_user_response_dto.go
@@ -1,0 +1,8 @@
+package dtos_http
+
+type GetUserResponseDto struct {
+	ID       uint
+	Name     string
+	Email    string
+	Password string
+}
