# pkg/users/infrastructure/in_adapters/http/dtos/login_request_dto.go
@@ -1,6 +1,0 @@
-package dtos_http
-
-type LoginDto struct {
-	Email    string
-	Password string
-}
