# pkg/users/infrastructure/in_adapters/http/dtos/register_request_dto.go
@@ -1,7 +1,0 @@
-package dtos_http
-
-type RegisterDto struct {
-	Name     string
-	Email    string
-	Password string
-}
